--- a/config_sample.cfg
+++ b/config_sample.cfg
@@ -4,3 +4,6 @@ driverpath = /usr/local/bin/chromedriver
 [Credentials]
 username = github_login_username
 password = github_login_password
+
+[Filenames]
+Control_file_path = leetcode_submissions.csv
